<resources>
    <string name="app_name">Gallery</string>

    <string name="user_name">User Name</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_gallery">Welcome to Gallery!</string>
    <string name="create_an_account">Create an account</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="New">New</string>
    <string name="Popular">Popular</string>
    <string name="username_too_short">username is too short</string>
    <string name="incorrect_number">incorrect phone number</string>
    <string name="email_already_registered">email already registered</string>
    <string name="password_less_then_8">password less than 8</string>
    <string name="passwords_dont_match">passwords don\'t match</string>
    <string name="sorry">Sorry!</string>
    <string name="no_pictures">This is no pictures.</string>
    <string name="come_back_later">Please come back later.</string>
    <string name="invalid_password">invalid password</string>
    <string name="user_not_found">user not found</string>
    <string name="tablayout">TabLayout</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="add_photo_fragment">Add photo fragment</string>
    <string name="profile_fragment">Profile fragment</string>
</resources>