<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".fragment_sign_in.SignInFragment">

    <LinearLayout
        android:id="@+id/signIn_cancel"
        android:layout_width="100dp"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:padding="8dp">
        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_cancel"/>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:dividerColor="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_H1"
            android:textColor="@color/black" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="100dp"
            android:layout_height="2dp"
            app:dividerColor="@color/error_red"
            android:layout_marginBottom="60dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signIn_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textInputLayout_style"
            app:endIconDrawable="@drawable/ic_email">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signIn_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/textInputLayout_style"
            app:endIconDrawable="@drawable/ic_eye_on">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:autofillHints="password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signIn_signIn"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:enabled="true"
            android:text="@string/sign_in"
            android:textSize="@dimen/text_size_H4"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/corner_radius"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_signIn_signUp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/sign_up"
            android:textSize="@dimen/text_size_H4"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/corner_radius"/>

    </LinearLayout>
</LinearLayout>